# fenn

./: README.md  pyproject.toml
docs/: notification_system.md
src/fenn/cli/: __init__.py  pull_command.py
src/fenn/vision/: __init__.py  color_mode.py  resize.py
src/smle/Notification/: __init__.py  discord_service.py  email_service.py  notifier.py  service.py  slack_service.py
src/tests/vision/: test_color_mode.py  test_resize.py
tests/notification/: test_notification.py
